fixed double scroll bar

--- a/src/app/components/shared-styles.css
+++ b/src/app/components/shared-styles.css
@@ -46,7 +46,7 @@ p, table {
     margin: 1rem;
     background-color: rgba(34, 34, 34, 0.7);
     border-radius: 3rem;
-    height: 80vh;
+    height: 70vh;
     overflow: scroll;
 }
 
